fix white gap

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -13,6 +13,7 @@ body {
   background-size: cover;
   width: 100vw;
   height: 100%;
+  overflow:auto;
   padding-top: 2em;
   
   img { cursor: pointer; }
@@ -144,7 +145,7 @@ button {padding: 0.4em; padding-top:0.6em; font-family: "chilanka", sans-serif;
   background-color: #17658f;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cg %3E%3Cpolygon fill='%231a8091' points='1800 160 0 560 0 450 1800 50'/%3E%3Cpolygon fill='%231d9b93' points='1800 360 0 660 0 550 1800 150'/%3E%3Cpolygon fill='%2320b794' points='1800 360 0 760 0 650 1800 250'/%3E%3Cpolygon fill='%2323d296' points='1800 460 0 860 0 750 1800 350'/%3E%3Cpolygon fill='%2326ed98' points='1800 800 0 800 0 850 1800 450'/%3E%3C/g%3E%3C/svg%3E");
   background-size: cover;
-  height: 100vh;
+  height: 100%;
   padding: 3em;
   
 
